--- a/mac/dream/templates/dream/basic.html
+++ b/mac/dream/templates/dream/basic.html
@@ -7,9 +7,125 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Hello, world!</title>
     {% block style %} {% endblock %}
+    <style>
+      *{
+        color: #d3d3d3;
+        box-sizing: border-box;
+      }
+      html, body{
+        height: 100%;
+        padding: 0px;
+        margin: 0px;
+        background-color: #f6f6f6;
+        font-family: 'Lora', serif;
+      }
+        .check{
+            background-color: blue;
+        }
+        footer{
+          background-color: #303036;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          padding-bottom: 20px;
+        }
+        .section {
+          display: flex;
+          justify-content: space-between;
+          padding: 4px;
+          border-bottom: double;
+        }
+        .section .get-connected {
+          
+          font-size: x-large;
+          font-weight: bolder;
+        }
+        .copy-rights{
+          text-align: center;
+          width: 100%;
+          height: 50px;
+          padding-top: 20px;
+          bottom: 0px;
+          left: 0px;
+        }
+        .flash{
+          display: flex;
+        }
+        .div-section{
+          flex: 1;
+          padding: 25px;
+          text-align: start;
+        }
+        .text-heading{
+          text-transform: uppercase;
+          font-weight: bold;
+          margin-bottom: 4px;
+          font-size: large;
+        }
+        
+        .icons i{
+          margin-right: 30px;
+        }
+        .full-screen{
+          display: flex;
+          flex: 1;
+        }
+        .icons-size{
+          font-size: 36px;
+        }
+        
+        @media only screen and (max-width: 769px) {
+          .for-tablet{
+          display: flex;
+        }
+        .row{
+          flex-direction: column;
+        }
+        .for-section{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          
+        }
+        .for-center{
+          margin: auto;
+        }
+
+
+          
+        }
+        @media only screen and (max-width: 400px){
+          .fold{
+            font-size: medium;
+
+
+          }
+          *{
+            font-size: small;
+          }
+          .mobile{
+            font-size: small;
+          }
+          .for-icons-size{
+            font-size: 24px;
+          }
+          .for-too-small-size{
+          flex-direction: column;
+        }
+        .row{
+          flex-direction: column;
+        }
+
+        }
+        .text-style{
+          text-decoration: none;
+          list-style: none;
+        }
+        
+    </style>
   </head>
 <body>
 
@@ -50,6 +166,136 @@
   </div>
 </nav>
     {% block body %} {% endblock %}
+    
+<!--My footer start from here-->
+<footer class="text-center">
+  <!-- Section: Social media -->
+  <section class="section for-section">
+    <!-- Left -->
+    <div class="get-connected mobile for-center">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div class="icons for-center">
+      <a href="" class="">
+        <i class="fa fa-facebook icons-size for-icons-size"></i>
+      </a>
+      <a href="" class="">
+        <i class="fa fa-twitter icons-size for-icons-size" ></i>
+      </a>
+      <a href="" class="">
+        <i class="fa fa-google icons-size for-icons-size"></i>
+      </a>
+      <a href="" class="">
+        <i class="fa fa-instagram icons-size for-icons-size"></i>
+      </a>
+      <a href="" class="t">
+        <i class="fa fa-linkedin icons-size for-icons-size"></i>
+      </a>
+      <a href="https://github.com/SaHIl-KhAtri?tab=repositories" class="me-4 text-reset">
+        <i class="fa fa-github icons-size for-icons-size"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    
+    <div class="">
+      <!-- Grid row -->
+      
+        <div class="flash row">
+          <!-- Grid column -->
+          <div class="for-tablet full-screen for-too-small-size">
+            <div class="div-section">
+              <!-- Content -->
+              <h1 class="text-heading fold">
+                <i class="fas fa-gem"></i>Chameli Devi group of institution
+              </h1>
+              <p>
+                Here you can use rows and columns to organize your footer content. Lorem ipsum
+                dolor sit amet, consectetur adipisicing elit.
+              </p>
+            </div>
+            <!-- Grid column -->
+    
+            <!-- Grid column -->
+            <div class="div-section">
+              <!-- Links -->
+              <h1 class="text-heading fold">
+                Products
+              </h1>
+              <p>
+                <a href="#!" class="text-reset">Angular</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">React</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Vue</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Laravel</a>
+              </p>
+            </div>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="for-tablet full-screen for-too-small-size">
+              <div class="div-section">
+                <!-- Links -->
+                <h1 class="text-heading fold">
+                  Useful links
+                </h1>
+                <p>
+                  <a href="#!" class="text-reset">Pricing</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Settings</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Orders</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Help</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="div-section">
+                <!-- Links -->
+                <h1 class="text-heading fold">
+                  Contact
+                </h1>
+                <p><i class="fa fa-home"></i>INDORE, (INDIA) </p>
+                <p>
+                  <i class="fa fa-envelope"></i>
+                  khatrisahil453@gmail.com
+                </p>
+                <p><i class="fa fa-phone"></i> + 91 6232792623</p>
+                <p><i class="fa fa-print"></i> + 01 234 567 89</p>
+              </div>
+          </div>
+          <!-- Grid column -->
+        </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="copy-rights" style="background-color: rgb(41 41 44);">
+    © 2021 Copyright:
+    <a class="text-style" href="">All right reserved</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 
 
 
