--- a/mac/dream/templates/dream/index.html
+++ b/mac/dream/templates/dream/index.html
@@ -1,14 +1,18 @@
 {% extends 'dream/basic.html' %}
 {% block style %}
+
 <style xmlns="http://www.w3.org/1999/html">
-        .row {
+        html, body{
+          width: 100%;
+        }
+        .second-row {
           background-color: aliceblue;
           height: 250px;
           width:  95%;
           color: black;
           margin: auto;
           display: flex;
-          justify-content: space-between;
+          justify-content: space-evenly;
           align-items: center;
           margin-top: 70px;
         }
@@ -23,6 +27,7 @@
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
     </style>
+  
 {% endblock %}
 {% block body %}
 {% load static %}
@@ -98,7 +103,7 @@
 
 <ul>
 
-  <div class="row">
+  <div class="second-row">
       <div class="card">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
@@ -109,7 +114,7 @@
       </div>
       {% for j in product|slice:"1:" %}
       {% if forloop.counter|divisibleby:3 and forloop.counter > 0 %}
-      </div><div class="row">
+      </div><div class="second-row">
       {% endif %}
       <div class="card">
         <img src="..." class="card-img-top" alt="...">
@@ -124,6 +129,7 @@
   </div>
   
   </ul>
+
   {% endblock %}
   
 
