[Some small changes]

--- a/mac/dream/templates/dream/about.html
+++ b/mac/dream/templates/dream/about.html
@@ -1,2 +1,9 @@
 {% extends 'dream/basic.html' %}
+{% block style %}
+<style>
+    body{
+        min-height: 100%;
+    }
+</style>
+{% endblock %}
 {% block title%}About{% endblock%}
