--- a/mac/dream/templates/dream/basic.html
+++ b/mac/dream/templates/dream/basic.html
@@ -22,15 +22,16 @@
         background-color: #f6f6f6;
         font-family: 'Lora', serif;
       }
+      
         .check{
             background-color: blue;
         }
         footer{
           background-color: #303036;
+          position: absolute;
           left: 0;
-          bottom: 0;
           width: 100%;
-          padding-bottom: 20px;
+          
         }
         .section {
           display: flex;
@@ -138,24 +139,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/dream">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/dream/about">About</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
+       
+        
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link fas fa fa-shopping-cart" href="#">(<span id="cart">0</span>)</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -311,5 +303,7 @@
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>;
+    {% block js %} {% endblock %}
+  </body>
 </html>
