--- a/mac/dream/templates/dream/index.html
+++ b/mac/dream/templates/dream/index.html
@@ -7,9 +7,10 @@
         }
         body{
           min-height: 100%;
+          background-color: E5E5E5;
         }
         .second-row {
-          background-color: aliceblue;
+          background-color: E5E5E5;
           height: auto;
           width:  95%;
           color: black;
