--- a/mac/dream/templates/dream/basic.html
+++ b/mac/dream/templates/dream/basic.html
@@ -8,30 +8,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Hello, world!</title>
+    <title>SahilMART</title>
     {% block style %} {% endblock %}
     <style>
       *{
-        color: #d3d3d3;
+        
         box-sizing: border-box;
       }
       html, body{
         height: 100%;
         padding: 0px;
         margin: 0px;
-        background-color: #f6f6f6;
+        background-color: #f1f1f1;
         font-family: 'Lora', serif;
       }
       
         .check{
             background-color: blue;
         }
-        footer{
-          background-color: #303036;
-          position: absolute;
+        #footer{
+          color: #fff;
+          overflow-x: hidden;
+          bottom: 0;
           left: 0;
           width: 100%;
           
+          
+        }
+        a{
+          color: #fff;
+          text-decoration: unset;
         }
         .section {
           display: flex;
@@ -132,7 +138,7 @@
 
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Sahil</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -160,7 +166,7 @@
     {% block body %} {% endblock %}
     
 <!--My footer start from here-->
-<footer class="text-center">
+<footer class="navbar-dark bg-dark" id="footer">
   <!-- Section: Social media -->
   <section class="section for-section">
     <!-- Left -->
@@ -282,9 +288,9 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-  <div class="copy-rights" style="background-color: rgb(41 41 44);">
+  <div class="copy-rights  bg-success btn-outline-dark">
     © 2021 Copyright:
-    <a class="text-style" href="">All right reserved</a>
+    <a class="text-style btn-outline-dark" href="#">All right reserved</a>
   </div>
   <!-- Copyright -->
 </footer>
